--- a/ToDoListApp/app/src/main/res/layout/activity_home_page.xml
+++ b/ToDoListApp/app/src/main/res/layout/activity_home_page.xml
@@ -26,12 +26,15 @@
         android:nestedScrollingEnabled="true"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/addbtn"
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_margin="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
         android:backgroundTint="@color/simplebackgroundcolor"
         android:src="@drawable/baseline_add" />
 
